# apertium-sux

./: Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  apertium-sux.pc  apertium-sux.pc.in  apertium-sux.sux.dix  apertium-sux.sux.dix.V1  apertium-sux.sux.lexd  config.status  configure  configure.ac  modes.xml  sux_preprocessing.ipynb
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
modes/: sux-disam.mode  sux-gener.mode  sux-morph.mode  sux-tagger.mode
speller/: index.xml
test/: tests.json
